# kksdcmd

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  registers.txt
kksdcm.xcodeproj/xcshareddata/xcschemes/: p44mbcd.xcscheme  p44mbutil.xcscheme
kksdcmd.xcodeproj/: project.pbxproj
kksdcmd.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
kksdcmd.xcodeproj/xcshareddata/xcschemes/: kksdcmd.xcscheme
src/: coreregmodel.cpp  coreregmodel.hpp  corespiproto.cpp  corespiproto.hpp  kksdcmd_main.cpp  p44mbutil_main.cpp  p44utils_config.hpp
